Squashed commit of the following:
commit c6cf28a2dbc70b25f82f5a6389c0d56fa1adaaa1
Author: Sander Smeets <sander@droneslab.com>
Date:   Mon Nov 8 09:00:22 2021 +0100

    Increase quadchute descent rate

commit b0ec84e0834cdef884011da7f657260fb5b10fd7
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Tue Aug 31 17:44:58 2021 +0200

    uavcan/sensors/battery: use remaining from battery lib

commit e6a5f6a6d25edb07984ae5e5d676d95d9ac708d2
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Thu Aug 26 17:17:49 2021 +0200

    uavcan/sensor/battery: disable s/n

commit 293e25bfb7c6286055603fae6098c03ab38b72a6
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Thu Aug 26 17:09:09 2021 +0200

    battery_status: naming consistency current_filtered_a -> current_average_a

commit 89f6b287867b9dc6bc1bd4ccfbd0808c2232a076
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Thu Aug 26 17:06:58 2021 +0200

    uavcan/sensors/battery: update battery status to use battery lib

commit 8e4b71658d29596e2acf112d82411f8ee18adf0e
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Wed Aug 4 18:34:37 2021 +0200

    lib/battery: change battery_status to a member and added getter function

commit dded82d820729f6a1f6cdb1f71a699786189ad46
Author: Silvan Fuhrer <silvan@auterion.com>
Date:   Fri Aug 13 09:47:19 2021 +0200

    Remove a couple of unnecessary reboot_required from parameter meta data

    Signed-off-by: Silvan Fuhrer <silvan@auterion.com>

commit 14ad16a9904efb179b281e7d70defbf18071cf62
Author: Matthias Grob <maetugr@gmail.com>
Date:   Wed Jun 30 15:18:38 2021 +0200

    battery: use local instead of global member battery_status message

commit 069d1efba22498fa56084ead690471fa36b64a5f
Author: Matthias Grob <maetugr@gmail.com>
Date:   Wed Jun 30 15:05:44 2021 +0200

    battery: clear interface for determineWarning()

commit 491a7efa8e3cef6724d6608b0510a0c3b92250f8
Author: Igor Mišić <igy1000mb@gmail.com>
Date:   Thu Aug 26 16:32:13 2021 +0200

    battery: publish measured values also when