@@ -1,14 +1,16 @@
-#! /bin/bash
+#!/usr/bin/env bash
+
+set -e
 
 SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 cd "$SCRIPT_DIR/jMAVSim"
 
-udp_port=14560
+tcp_port=4560
 extra_args=
 baudrate=921600
 device=
 ip="127.0.0.1"
-while getopts ":b:d:p:qr:i:" opt; do
+while getopts ":b:d:p:qsr:f:i:lo" opt; do
 	case $opt in
 		b)
 			baudrate=$OPTARG
@@ -20,13 +22,22 @@ while getopts ":b:d:p:qr:i:" opt; do
 			ip="$OPTARG"
 			;;
 		p)
-			udp_port=$OPTARG
+			tcp_port=$OPTARG
 			;;
 		q)
 			extra_args="$extra_args -qgc"
 			;;
+		s)
+			extra_args="$extra_args -sdk"
+			;;
 		r)
 			extra_args="$extra_args -r $OPTARG"
+			;;
+		l)
+			extra_args="$extra_args -lockstep"
+			;;
+		o)
+			extra_args="$extra_args -disponly"
 			;;
 		\?)
 			echo "Invalid option: -$OPTARG" >&2
@@ -36,19 +47,16 @@ while getopts ":b:d:p:qr:i:" opt; do
 done
 
 if [ "$device" == "" ]; then
-	device="-udp $ip:$udp_port"
+	device="-tcp $ip:$tcp_port"
 else
 	device="-serial $device $baudrate"
+fi
+
+if [ "$HEADLESS" = "1" ]; then
+    extra_args="$extra_args -no-gui"
 fi
 
 ant create_run_jar copy_res
 cd out/production
 
 java -XX:GCTimeRatio=20 -Djava.ext.dirs= -jar jmavsim_run.jar $device $extra_args
-ret=$?
-if [ $ret -ne 0 -a $ret -ne 130 ]; then # 130 is Ctrl-C
-	# if the start of java fails, it's probably because the GC option is not
-	# understood. Try starting without it
-	java -Djava.ext.dirs= -jar jmavsim_run.jar $device $extra_args
-fi
-
